@@ -1951,7 +1951,7 @@ function view_parse(content, minify, filename, controller) {
 	if (RELEASE)
 		builder = builder.replace(/(\+\$EMPTY\+)/g, '+').replace(/(\$output=\$EMPTY\+)/g, '$output=').replace(/(\$output\+=\$EMPTY\+)/g, '$output+=').replace(/(\}\$output\+=\$EMPTY)/g, '}').replace(/(\{\$output\+=\$EMPTY;)/g, '{').replace(/(\+\$EMPTY\+)/g, '+').replace(/(>'\+'<)/g, '><').replace(/'\+'/g, '');
 
-	var fn = '(function(self,repository,model,session,query,body,url,global,helpers,user,config,functions,index,output,cookie,files,mobile,settings){var get=query;var post=body;var theme=this.themeName;var language=this.language;var sitemap=this.repository.$sitemap;var cookie=function(name){return controller.req.cookie(name);};' + (functions.length ? functions.join('') + ';' : '') + 'var controller=self;' + builder + ';return $output;})';
+	var fn = '(function(self,repository,model,session,query,body,url,global,helpers,user,config,functions,index,output,cookie,files,mobile,settings){var get=query;var post=body;var R=this.repository;var M=model;var theme=this.themeName;var language=this.language;var sitemap=this.repository.$sitemap;var cookie=function(name){return self.req.cookie(name)};' + (functions.length ? functions.join('') + ';' : '') + 'var controller=self;' + builder + ';return $output;})';
 	try {
 		fn = eval(fn);
 	} catch (e) {
@@ -2029,6 +2029,8 @@ function view_prepare(command, dynamicCommand, functions, controller) {
 		case '!isomorphic':
 			return '$STRING(' + command + ')';
 
+		case 'M':
+		case 'R':
 		case 'model':
 		case 'repository':
 		case 'get':
@@ -2039,12 +2041,10 @@ function view_prepare(command, dynamicCommand, functions, controller) {
 		case 'user':
 		case 'config':
 		case 'controller':
-			return view_is_assign(command) ? 'self.$set(' + command + ')' : '$STRING(' + command + ').encode()';
+			return view_is_assign(command) ? ('self.$set(' + command + ')') : ('$STRING(' + command + ').encode()');
 
 		case 'body':
-			if (view_is_assign(command))
-				return 'self.$set(' + command + ')';
-			return command.lastIndexOf('.') === -1 ? 'output' : '$STRING(' + command + ').encode()';
+			return view_is_assign(command) ? ('self.$set(' + command + ')') : command.lastIndexOf('.') === -1 ? 'output' : ('$STRING(' + command + ').encode()');
 
 		case 'files':
 		case 'mobile':
