@@ -1,6 +1,7 @@
 ======= 2.9.1
 
 - added: `controller.throw409()`, `req.throw409()`
+- added: new view aliases: `@{R.something}` for `repository` and `@{M.something}` for `model`
 
 - updated: `ErrorBuilder.push()` supports `.push(name, status_code)` or `.push(name, error, status_code)`
 
